--- a/03.asynchronous/fetch.html
+++ b/03.asynchronous/fetch.html
@@ -8,13 +8,10 @@
     <script>
       async function FetchUrl(url) {
         const response = await fetch(url);
-        return response;
+        const text = await response.text();
+        console.log(text);
       }
-      FetchUrl("https://bootcamp.fjord.jp/")
-        .then((response) => {
-          return response.text();
-        })
-        .then((text) => console.log(text));
+      FetchUrl("https://bootcamp.fjord.jp/");
     </script>
   </body>
 </html>
